# NSE_Liveboard

./: app.py  config.py  daily_history_sync.py  database.py  historical_database.py  historical_loader.py  historical_stocks.db  main.py  pyproject.toml  scheduler.py  stock_service.py  stocks.db  yahoo_service.py
styles/: dashboard.css
