[project]
name = "livedashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
    "streamlit-autorefresh>=1.0.1",
    "yfinance>=1.5.1",
]
